[project]
name = "virus-clade-utils"
version = "0.0.1"
description = "Assign clades to viral genome sequences at a point in time."
authors = [
    {name = "Becky Sweger", email = "rsweger@umass.edu"},
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "awscli>=1.32.92",
    "click",
    "cloudpathlib",
    "pandas",
    "polars>=0.20.23",
    "pyarrow",
    "requests",
    "rich",
    "rich-click",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff",
]

[project.entry-points."console_scripts"]
assign_clades = "virus_clade_utils.assign_clades:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]

[tools.setuptools]
packages = ["virus_clade_utils"]