[project]
name = "cladetime"
version = "0.2.0"
description = "Assign clades to viral genome sequences at a point in time."
authors = [
    {name = "Evan Ray", email="elray@umass.edu"},
    {name = "Ben Rogers", email = "bwrogers@umass.edu"},
    {name = "Becky Sweger", email = "rsweger@umass.edu"},
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "awscli>=1.32.92",
    "boto3",
    "click",
    "cloudpathlib",
    "pandas",
    "polars>=1.0.0",
    "pyarrow",
    "requests>=2.32.0",
    "rich",
    "rich-click",
    "structlog",
    "urllib3",
    "us",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs[s3]",
    "coverage",
    "freezegun",
    "moto",
    "mypy",
    "pytest",
    "pytest-mock",
    "ruff",
    "types-python-dateutil",
    "types-requests",
]

[project.urls]
Repository = "https://github.com/reichlab/cladetime.git"

[project.entry-points."console_scripts"]
assign_clades = "cladetime.assign_clades:main"
clade_list = "cladetime.get_clade_list:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
filterwarnings = [
    "ignore::cladetime.exceptions.CladeTimeFutureDateWarning",
    "ignore::DeprecationWarning",
    'ignore:polars found a filename',
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]

[tools.setuptools]
packages = ["cladetime"]

[tool.mypy]
ignore_missing_imports = true

